# mate-applet-softupd

./: 4.diff  CHANGES  ChangeLog  Makefile.am  Makefile.in  README  TODO  TRANSLATIONS  autogen.sh  configure.ac  mate-applet-softupd.spec.in
images/: Makefile.am  icon.xcf
po/: LINGUAS  Makefile.in  bg_BG.po  en_GB.po  fr_FR.po  pt_BR.po  pt_PT.po  ru_RU.po  softupd.pot  zh_CN.po
po/bg_BG/: softupd.po
po/en_US/: softupd.po
po/ru_RU/: softupd.po
src/: Makefile.am  Makefile.in  applet.h  backend-aptcheck.c  backend-dnf.c  backend-dnf.c.rej  backend-packagekit.c  backend-yum.c  backend-yumupdatesd.c  main.c  org.mate.applets.SoftupdApplet.mate-panel-applet.in  org.mate.panel.applet.SoftupdApplet.service.in
